feat: Add PathPrefix to webui

--- a/webui/web/explorer.html
+++ b/webui/web/explorer.html
@@ -16,6 +16,7 @@ under the License.
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <base href="{{.WEBUI_PATH_PREFIX}}">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VersityGW - Explorer</title>
